[gd_scene load_steps=13 format=2]

[ext_resource path="res://Scenes/TrainWheel.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/TrainVehicle.gd" type="Script" id=2]
[ext_resource path="res://Demo/Assets/train_car.png" type="Texture" id=3]
[ext_resource path="res://Demo/Assets/detach.png" type="Texture" id=4]
[ext_resource path="res://Demo/Assets/attach.png" type="Texture" id=5]
[ext_resource path="res://Scripts/TrainCarAttach.gd" type="Script" id=6]
[ext_resource path="res://Scenes/StationConnector.gd" type="Script" id=7]
[ext_resource path="res://Demo/Assets/load.png" type="Texture" id=8]
[ext_resource path="res://Scenes/MiniMenuCanvas.gd" type="Script" id=9]
[ext_resource path="res://Scenes/LoadUnload.gd" type="Script" id=10]

[sub_resource type="RectangleShape2D" id=1]

[sub_resource type="RectangleShape2D" id=2]

[node name="TrainVehicle" type="Node2D"]
position = Vector2( 81, 40 )
script = ExtResource( 2 )

[node name="RailFollower" parent="." groups=["train_front_wheels"] instance=ExtResource( 1 )]
offset = 20.0

[node name="RailFollower2" parent="." groups=["train_back_wheels"] instance=ExtResource( 1 )]

[node name="Body" type="Node2D" parent="."]
z_index = 10
script = ExtResource( 6 )

[node name="Node2D" type="Node2D" parent="Body"]
z_index = 3
z_as_relative = false

[node name="ColorRect" type="ColorRect" parent="Body/Node2D"]
margin_left = -15.0
margin_top = -4.0
margin_right = -7.0
margin_bottom = 4.0
color = Color( 0.133333, 0.133333, 0.133333, 1 )

[node name="ColorRect2" type="ColorRect" parent="Body/Node2D"]
margin_left = 68.0
margin_top = -4.0
margin_right = 77.0
margin_bottom = 4.0
color = Color( 0, 0, 0, 1 )

[node name="Node2D2" type="Node2D" parent="Body"]
z_index = 10
z_as_relative = false

[node name="TextureRect" type="TextureRect" parent="Body/Node2D2"]
margin_left = -10.0
margin_top = -12.0
margin_right = 70.0
margin_bottom = 12.0
rect_rotation = 359.999
texture = ExtResource( 3 )

[node name="AttachFront" type="TextureButton" parent="Body"]
visible = false
margin_left = -22.0
margin_top = -10.0
margin_right = 18.0
margin_bottom = 30.0
rect_scale = Vector2( 0.5, 0.5 )
texture_normal = ExtResource( 5 )
expand = true
stretch_mode = 4

[node name="DetachFront" type="TextureButton" parent="Body"]
visible = false
margin_left = -22.0
margin_top = -10.0
margin_right = 18.0
margin_bottom = 30.0
rect_scale = Vector2( 0.5, 0.5 )
texture_normal = ExtResource( 4 )
expand = true
stretch_mode = 4

[node name="AttachBack" type="TextureButton" parent="Body"]
visible = false
margin_left = 62.0
margin_top = -10.0
margin_right = 102.0
margin_bottom = 30.0
rect_scale = Vector2( 0.5, 0.5 )
texture_normal = ExtResource( 5 )
expand = true
stretch_mode = 4

[node name="DetachBack" type="TextureButton" parent="Body"]
visible = false
margin_left = 62.0
margin_top = -10.0
margin_right = 102.0
margin_bottom = 30.0
rect_scale = Vector2( 0.5, 0.5 )
texture_normal = ExtResource( 4 )
expand = true
stretch_mode = 4

[node name="FrontCollision" type="Area2D" parent="Body"]
position = Vector2( -18, 0 )
scale = Vector2( 0.163881, 2.76296 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Body/FrontCollision"]
position = Vector2( 23, 0 )
scale = Vector2( 1.52245, 0.298029 )
shape = SubResource( 1 )

[node name="BackCollision" type="Area2D" parent="Body"]
position = Vector2( 72, 0 )
scale = Vector2( 0.164, 2.763 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Body/BackCollision"]
position = Vector2( 23, 0 )
scale = Vector2( 1.52245, 0.298029 )
shape = SubResource( 1 )

[node name="FrontBumper" type="Area2D" parent="Body" groups=["Bumper"]]
position = Vector2( -15, 0 )
scale = Vector2( 0.163881, 2.76296 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Body/FrontBumper"]
position = Vector2( 23, 0 )
scale = Vector2( 1.52245, 0.298029 )
shape = SubResource( 1 )

[node name="BackBumper" type="Area2D" parent="Body" groups=["Bumper"]]
position = Vector2( 69, 0 )
scale = Vector2( 0.164, 2.763 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Body/BackBumper"]
position = Vector2( 23, 0 )
scale = Vector2( 1.52245, 0.298029 )
shape = SubResource( 1 )

[node name="StationConnector" type="Area2D" parent="Body"]
collision_layer = 2
collision_mask = 2
script = ExtResource( 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Body/StationConnector"]
position = Vector2( 30, 0 )
scale = Vector2( 1.67495, 0.810251 )
shape = SubResource( 2 )

[node name="LoadButton" type="TextureButton" parent="Body"]
margin_left = 9.0
margin_top = -19.0
margin_right = 49.0
margin_bottom = 21.0
texture_normal = ExtResource( 8 )
expand = true

[node name="MiniMenuCanvas" type="CanvasLayer" parent="Body"]
visible = false
script = ExtResource( 9 )

[node name="Panel" type="Panel" parent="Body/MiniMenuCanvas"]
margin_right = 200.0
margin_bottom = 200.0
script = ExtResource( 10 )

[node name="LoadUnload" type="Button" parent="Body/MiniMenuCanvas/Panel"]
margin_right = 90.0
margin_bottom = 25.0
text = "Load Cargo"
align = 0

[node name="LoadingDropdown" type="OptionButton" parent="Body/MiniMenuCanvas/Panel"]
margin_left = 54.0
margin_top = 40.0
margin_right = 154.0
margin_bottom = 65.0

[node name="ExitButton" type="TextureButton" parent="Body/MiniMenuCanvas/Panel"]
margin_left = 170.0
margin_right = 200.0
margin_bottom = 30.0
texture_normal = ExtResource( 4 )
expand = true

[node name="ProgressBar" type="ProgressBar" parent="Body/MiniMenuCanvas/Panel"]
modulate = Color( 1, 1, 0, 1 )
margin_left = 26.0
margin_top = 133.0
margin_right = 176.0
margin_bottom = 158.0

[node name="RichTextLabel" type="RichTextLabel" parent="Body/MiniMenuCanvas/Panel"]
margin_left = 63.0
margin_top = 117.0
margin_right = 143.0
margin_bottom = 137.0
text = "Fill Amount"

[node name="Button" type="Button" parent="Body/MiniMenuCanvas/Panel"]
modulate = Color( 0.376471, 0.992157, 0, 1 )
self_modulate = Color( 0.290196, 1, 0, 1 )
margin_left = 17.0
margin_top = 166.0
margin_right = 182.0
margin_bottom = 191.0
input_pass_on_modal_close_click = false
text = "LOAD"

[node name="HSlider" type="HSlider" parent="Body/MiniMenuCanvas/Panel"]
modulate = Color( 3, 3.5, 0, 1 )
margin_left = 25.0
margin_top = 92.0
margin_right = 175.0
margin_bottom = 112.0
tick_count = 10

[node name="Counter" type="RichTextLabel" parent="Body/MiniMenuCanvas/Panel"]
margin_left = 89.0
margin_top = 76.0
margin_right = 129.0
margin_bottom = 116.0
text = "10"

[connection signal="pressed" from="Body/AttachFront" to="Body" method="_on_AttachFront_pressed"]
[connection signal="pressed" from="Body/DetachFront" to="Body" method="_on_DetachFront_pressed"]
[connection signal="pressed" from="Body/AttachBack" to="Body" method="_on_AttachBack_pressed"]
[connection signal="pressed" from="Body/DetachBack" to="Body" method="_on_DetachBack_pressed"]
[connection signal="area_entered" from="Body/FrontCollision" to="Body" method="_on_FrontArea_entered"]
[connection signal="area_exited" from="Body/FrontCollision" to="Body" method="_on_FrontArea_exited"]
[connection signal="area_entered" from="Body/BackCollision" to="Body" method="_on_BackArea_entered"]
[connection signal="area_exited" from="Body/BackCollision" to="Body" method="_on_BackArea_exited"]
[connection signal="area_entered" from="Body/FrontBumper" to="." method="_on_FrontBumper_body_entered"]
[connection signal="area_exited" from="Body/FrontBumper" to="." method="_on_FrontBumper_body_exited"]
[connection signal="area_entered" from="Body/BackBumper" to="." method="_on_BackBumper_body_entered"]
[connection signal="area_exited" from="Body/BackBumper" to="." method="_on_BackBumper_body_exited"]
[connection signal="pressed" from="Body/LoadButton" to="Body/MiniMenuCanvas" method="_on_LoadButton_pressed"]
[connection signal="pressed" from="Body/MiniMenuCanvas/Panel/LoadUnload" to="Body/MiniMenuCanvas" method="toggle_mode"]
[connection signal="item_selected" from="Body/MiniMenuCanvas/Panel/LoadingDropdown" to="Body/MiniMenuCanvas" method="on_item_selected"]
[connection signal="pressed" from="Body/MiniMenuCanvas/Panel/ExitButton" to="Body/MiniMenuCanvas" method="_on_ExitButton_pressed"]
[connection signal="pressed" from="Body/MiniMenuCanvas/Panel/Button" to="Body/MiniMenuCanvas" method="_on_load_button_pressed"]
